fix gap btw image in farmer.html

--- a/styles/farmer.css
+++ b/styles/farmer.css
@@ -70,7 +70,7 @@ h1{
 #ImageGallery img{
     object-fit: cover;
     height: 150px;
-    width: 300px;
+    width: 325px;
     box-sizing: border-box;
 }
 
